# fameclaw

./: .gitignore  .npmignore  LICENSE  LICENSE-COMMERCIAL  LICENSE-FSL  README.md  SKILL.md  package-lock.json  package.json
cli/: README.md  pyproject.toml
cli/fameclaw/: __init__.py  analytics.py  campaigner.py  cli.py  config.py  ledger.py  state.py  validation.py  warmup.py
cli/skill/: SKILL.md
cli/tests/: conftest.py  test_campaign_run.py  test_campaigner.py  test_pipeline.py  test_sender.py  test_suppressor.py  test_templates.py  test_validation.py  test_warmup.py
fameclaw/: __init__.py  bouncer.py  cli.py  exceptions.py  ledger.py  models.py  replier.py  sender.py  suppressor.py  templates.py
nanoclaw/: SKILL.md
nanoclaw/references/: category-mapping.md  negotiation_notes.md
references/: negotiation_notes.md  negotiation_playbook.md
scripts/: agent_mail.py  agentmail_provider.py  enrich_socials.sh  extract_channel_data.sh  extract_email.sh  extract_tiktok.sh  extract_tiktokshop.sh  extract_x.sh  find_related_channels.sh  get_videos.sh  gmail.py  gmail_auth.sh  migrate_from_raw.py  negotiate.py  onboard.sh  outreach.py  outreach.sh  prospect.sh  prospect_tiktok.sh  prospect_tiktok_worker.js  prospect_tiktokshop.sh  safety.py  scan_site.py  score_channels.py
tests/: __init__.py  test_ledger.py
