[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fameclaw"
version = "0.2.0"
description = "Personal outreach with invisible safety nets"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "agentmail>=0.3",
    "filelock>=3.0",
    "rich>=13.0",
    "jinja2>=3.0",
]

[project.scripts]
fameclaw = "fameclaw.cli:cli"

[tool.setuptools.packages.find]
include = ["fameclaw*"]
